# push-2-talk

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  bump-version.ps1  index.html  overlay.html  package-lock.json  package.json  squash-commits.ps1  tag-release.ps1  tailwind.config.js  项目进展.md
.claude/: settings.local.json
.github/workflows/: release.yml
scripts/: convert-icon.mjs
src/: App.tsx  OverlayWindow.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  hotkey_service.rs  lib.rs  qwen_asr.rs  usage_stats.rs  win32_input.rs
src-tauri/src/asr/: mod.rs  race_strategy.rs
src-tauri/src/asr/http/: doubao.rs  qwen.rs
src-tauri/src/pipeline/: assistant.rs  normal.rs
src/components/: ErrorDisplay.tsx
src/components/common/: ApiKeyInput.tsx  ConfigSelect.tsx  ConfigToggle.tsx  Modal.tsx  Toggle.tsx  Tooltip.tsx  index.ts
src/components/history/: HistoryDrawer.tsx
src/components/layout/: RightPanel.tsx  Sidebar.tsx  TopStatusBar.tsx
src/components/live/: RecentActivity.tsx  TranscriptDisplay.tsx
src/components/modals/: CloseConfirmDialog.tsx  UpdateModal.tsx
src/constants/: index.ts
src/contexts/: ConfigSaveContext.tsx
src/hooks/: useAppServiceController.ts  useDictionary.ts  useHistoryController.ts  useHotkeyRecording.ts  useLlmPresets.ts  useTauriEventListeners.ts  useUpdater.ts
src/pages/: AsrPage.tsx  AssistantPage.tsx  DashboardPage.tsx  DictionaryPage.tsx  HistoryPage.tsx  HotkeysPage.tsx  LlmPage.tsx  PreferencesPage.tsx  types.ts
src/types/: index.ts
src/utils/: errorParser.ts  formatters.ts  history.ts  hotkey.ts  index.ts  usageStats.ts
ui/: ai_studio_code (17).html
